feat: added auth handler

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ APP_DB_PASSWORD="password"
 APP_DB_HOST="localhost"
 APP_DB_PORT="5432"
 APP_DB_NAME="company"
+APP_SECRET_KEY="SUPER-SECRET-DO-NOT-SHARE"
+APP_PORT=":8080"
